Update images and navigation links in about.html

--- a/about.html
+++ b/about.html
@@ -184,30 +184,27 @@
                             <br>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-2.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html"
-                                            title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html"
-                                            title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html"
-                                            title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-2.jpg" height="229"
-                                    width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
                             </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
                             <div class="col-3">
                                 <img class="circle" src="img/orange-globe.png">
                             </div> <!-- end col-3 -->
@@ -220,30 +217,27 @@
                             <h2>We're flying around the globe</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html"
-                                            title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html"
-                                            title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html"
-                                            title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229"
-                                    width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229" width="398">
                             </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
 
                             <div class="col-3">
                                 <img id="waves" class="circle" src="images/waves.png">
@@ -257,30 +251,27 @@
                             <h2>Above the clouds &amp; over the sea.</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-7.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html"
-                                            title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html"
-                                            title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html"
-                                            title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229"
-                                    width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-8.jpg" height="229" width="398">
                             </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
 
                             <div class="col-3">
                                 <img id="plane" class="circle" src="images/plane.png">
@@ -293,30 +284,27 @@
                             <h2>In just 42 hours and 27 minutes</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-7.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-8.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html"
-                                            title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html"
-                                            title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html"
-                                            title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-8.jpg" height="229"
-                                    width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-9.jpg" height="229" width="398">
                             </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
                             <div class="col-3">
                                 <img id="paper-blue" class="circle" src="images/paper-blue.png">
                             </div><!-- end col-3 -->
@@ -328,30 +316,27 @@
                             <h2>So come along for the ride!</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-9.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-10.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html"
-                                            title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html"
-                                            title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html"
-                                            title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-10.jpg" height="229"
-                                    width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-11.jpg" height="229" width="398">
                             </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
                             <!--
                         <h3>Around town last night</h3>
                         <div id="photos">
@@ -534,8 +519,6 @@
                         </div><!-- end-col-12 -->
                     </div><!-- end-row -->
 
-                    <div data-role="content" class="data" id="html5-ch1-7content">
-                        <b>
                             <p id="no-script">We recommend that you have JavaScript enabled!</p>
                         </b>
                         <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p>
@@ -547,18 +530,17 @@
                                 <img src="img/kite.png">
                                 <h2>Welcome!</h2>
                             </div>
-
-                            <div class="row">
-                                <div class="col-12" style="padding: 2%;">
-                                    <div id="banner">
-                                        <div id="banner-wrapper">
-                                            <h2 class="heading"><strong>Practical HTML5 Projects for fun and
-                                                    Profit</strong></h2>
-                                        </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12" style="padding: 2%;">
+                                <div id="banner">
+                                    <div id="banner-wrapper">
+                                        <h2 class="heading"><strong>Practical HTML5 Projects for fun and Profit</strong></h2>
                                     </div>
                                 </div>
-                            </div><!-- end-.row -->
-                        </div>
+                            </div>
+                        </div><!-- end-.row -->
+                        
 
                         <div class="row" style="background-color: #f6931e;">
                             <div class="col-11">
