--- a/membership.html
+++ b/membership.html
@@ -159,12 +159,11 @@
                         <div class="çol-12">
                             <img src="img/paper.png">
                             <br>
-                            <div class="data" id="html5style2leftcol">
+                           <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-21.jpg" width="300">
                                 <br>
-                                <p>The superb interior of one of our cottages</p>
+                                The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
@@ -178,11 +177,10 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
-                                    width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-22.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
-                    </div> <!-- end class row -->
+                    </div><!-- end-.row -->
                     <br class="clear">
 
                     <div class="row" style="background-color: #F6931E;">
@@ -191,9 +189,9 @@
                             <br>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-23.jpg" width="300">
                                 <br>
-                                <p>The superb interior of one of our cottages</p>
+                                The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
@@ -207,36 +205,37 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-24.jpg" height="229" width="398">
                             </div>
-                        </div><!-- end col-11 -->
-                    </div> <!-- end class row -->
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
                     <br class="clear">
                 
                     <div class="row" style="background-color: #F6931E;">
                     <div class="col-11">
                         <div class="data" id="html5style2leftcol">
-                            <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                width="300">
-                            <br>
-                            <p>The superb interior of one of our cottages</p>
-                        </div><!-- end_left-col -->
-                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                            <ul><!--start of menu list-->
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-25.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
-                        </nav>
-                        <!--</div> removed and replaced with </nav>-->
-                        <div class="data" id="html5style2midcol">
-                            <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
-                                width="398">
-                        </div>
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-26.jpg" height="229" width="398">
+                            </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
                         <div class="col-3">
                             <img class="circle" src="img/orange-globe.png">
 
@@ -250,27 +249,28 @@
                     <div class="col-10">
                         <h2>We're flying around the globe</h2>
                         <div class="data" id="html5style2leftcol">
-                            <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                width="300">
-                            <br>
-                            <p>The superb interior of one of our cottages</p>
-                        </div><!-- end_left-col -->
-                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                            <ul><!--start of menu list-->
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-27.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
-                        </nav>
-                        <!--</div> removed and replaced with </nav>-->
-                        <div class="data" id="html5style2midcol">
-                            <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
-                                width="398">
-                        </div>
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-28.jpg" height="229" width="398">
+                            </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
 
                         <div class="col-3">
                             <img id="waves" class="circle" src="images/waves.png">
@@ -286,27 +286,28 @@
                     <div class="col-9">
                         <h2>Above the clouds &amp; over the sea.</h2>
                         <div class="data" id="html5style2leftcol">
-                            <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                width="300">
-                            <br>
-                            <p>The superb interior of one of our cottages</p>
-                        </div><!-- end_left-col -->
-                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                            <ul><!--start of menu list-->
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-29.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
-                        </nav>
-                        <!--</div> removed and replaced with </nav>-->
-                        <div class="data" id="html5style2midcol">
-                            <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
-                                width="398">
-                        </div>
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-30.jpg" height="229" width="398">
+                            </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
 
                         <div class="col-3">
                             <img id="plane" class="circle" src="images/plane.png">
@@ -318,27 +319,28 @@
                     <div class="col-8">
                         <h2>In just 42 hours and 27 minutes</h2>
                         <div class="data" id="html5style2leftcol">
-                            <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                width="300">
-                            <br>
-                            <p>The superb interior of one of our cottages</p>
-                        </div><!-- end_left-col -->
-                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                            <ul><!--start of menu list-->
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-31.jpg" width="300">
+                                <br>
+                                The superb interior of one of our cottages
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
-                        </nav>
-                        <!--</div> removed and replaced with </nav>-->
-                        <div class="data" id="html5style2midcol">
-                            <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
-                                width="398">
-                        </div>
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-32.jpg" height="229" width="398">
+                            </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
                         <div class="col-3">
                             <img id="paper-blue" class="circle" src="images/paper-blue.png">
                         </div><!-- end col-3 -->
@@ -361,10 +363,9 @@
                             <img src="img/kite.png">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-33.jpg" width="300">
                                 <br>
-                                <p>The superb interior of one of our cottages</p>
+                                The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
@@ -378,8 +379,11 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-34.jpg" height="229" width="398">
                             </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
                         <h3>Around town last night</h3>
                         <div id="photos">
                             <a href="#" class="trigger">Image Gallery</a>
