--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	<link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
-	<link rel="stylesheet" type="text/css" href="./CSS/css/base.css">
-	<link rel="stylesheet" type="text/css" href="./CSS/css/bullets.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/base.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/bullets.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css"> 
 	<link rel="stylesheet" type="text/css" href="./CSS/collage-ie.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/colorbox.css">
