Comment out embedded CSS styles
Commented out the embedded CSS styles in the HTML file.

--- a/inline-block.html
+++ b/inline-block.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flat Fix Pros - Fast Tire Repair & Service</title>
-    <style>
-        /* CSS styles are embedded here for a single-file example */
+    /*
+    style>
+         CSS styles are embedded here for a single-file example 
         body {
             font-family: sans-serif;
             line-height: 1.6;
@@ -77,8 +78,11 @@
             padding: 20px 0;
             margin-top: 20px;
         }
+
+    
     </style>
     
+    */
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
